1) Autoport tool pre-loader screen 2) Remove button implementation for batch reports 3) Enabled 'Remove' button for batch files 4) Loading icon for showing the status for i) batch Build+Test ii) batch Archive iii) batch file Listing 5) Fix for List(GSA) batch report 6) Removed unwanted spacing, renamed get_dir to copyRemoteDirToLocal 7) Reverting back the RegEx

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -301,3 +301,37 @@ fieldset[disabled] .form-control {
     margin: 10px 30px !important;
     padding: 14px !important;
 }
+
+#loading_screen{
+    width: 213px;
+    height: 50px;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.glyphicon-refresh-animate {
+   -webkit-animation-name: rotateThis;
+   -webkit-animation-duration: 2s;
+   -webkit-animation-iteration-count: infinite;
+   -webkit-animation-timing-function: linear;
+   -moz-animation: spin2 .7s infinite linear;
+}
+
+@-webkit-keyframes "rotateThis" {
+ from {
+        -webkit-transform: rotate( 0deg );
+    }
+ to  {
+        -webkit-transform: rotate( 360deg );
+    }
+}
+
+@-moz-keyframes spin2 {
+    from { -moz-transform: rotate(0deg);}
+    to { -moz-transform: rotate(360deg);}
+}
+
